--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.cdnfonts.com/css/baron-neue" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar">
