removed jumping arrow

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/baron-neue" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
-        <div class="logo">GUARD</div>
+        <div class="logo"><a href="#">GUARD</a></div>
         <ul class="nav-links">
-          <li><a href="#risks">Riscos</a></li>
-          <li><a href="#how-it-works">Como Funciona</a></li>
+          <li><a href="#riscos">Riscos</a></li>
+          <li><a href="#como-funciona">Como Funciona</a></li>
           <li><a href="https://loja.guardcard.com.br" target="_blank">Compre Agora</a></li>
         </ul>
       </div>
@@ -39,7 +41,7 @@
     </header>
 
     <main>
-      <section id="risks" class="features-section">
+      <section id="riscos" class="features-section">
         <div class="container">
           <h2>Onde os golpes mais acontecem?</h2>
           <p style="text-align: center; max-width: 600px; margin: 0 auto 30px;">Fique atento! Os golpes de aproximação são mais comuns em locais de grande movimento, como:</p>
@@ -78,7 +80,7 @@
         </div>
       </section>
 
-      <section id="how-it-works" class="how-it-works-section">
+      <section id="como-funciona" class="how-it-works-section">
         <div class="container">
           <div class="how-it-works-content">
             <div class="how-it-works-text">
@@ -119,7 +121,7 @@
 
       <section id="cta" class="cta-section">
         <div class="container">
-          <h2>Não de sorte ao azar, peça já o seu!</h2>
+          <h2>Não dê sorte ao azar, peça já o seu!</h2>
           <p>Aproveite o preço promocional de lançamento</p>
           <a href="https://loja.guardcard.com.br" target="_blank" class="btn"
             >Comprar com 50% de desconto</a
@@ -130,7 +132,7 @@
 
     <footer class="cta-section">
       <div class="container">
-        <div class="logo">GUARD</div>
+        <div class="logo"><a>GUARD</a></div>
         <p>&copy; 2025 GUARD CARD. Todos os direitos reservados.</p>
       </div>
     </footer>
