add golpe section explaining how the scammers act

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="container">
         <div class="logo"><a href="#">GUARD</a></div>
         <ul class="nav-links">
-          <li><a href="#riscos">Riscos</a></li>
+          <li><a href="#golpe">Como funciona o golpe?</a></li>
+          <li><a href="#riscos">Locais de risco</a></li>
           <li><a href="#como-funciona">Como Funciona</a></li>
           <li><a href="https://loja.guardcard.com.br" target="_blank">Compre Agora</a></li>
         </ul>
@@ -41,6 +42,30 @@
     </header>
 
     <main>
+      <section id="golpe" class="features-section">
+        <div class="container">
+          <h2 style="text-align: center; margin-bottom: 30px;">Como funciona o golpe da aproximação?</h2>
+          <div class="alternating-columns">
+            <div class="column">
+              <p style="text-align: justify;">
+                O golpe da aproximação, também conhecido como da maquininha, ocorre quando um criminoso, 
+                utilizando uma maquininha de cartão escondida, se aproxima da vítima e efetua uma transação sem que ela perceba.  
+              </p>
+              <p style="text-align: justify;">
+                O golpista digita um valor na maquininha, geralmente abaixo do limite que exige senha, e aproxima o dispositivo do bolso, bolsa ou carteira da pessoa. 
+              </p>
+              <p style="text-align: justify;">
+                Se o cartão com a função de pagamento por aproximação estiver ao alcance, a transação é realizada instantaneamente. 
+                A vítima só percebe o roubo ao verificar o extrato bancário.
+              </p>
+            </div>
+            <div class="column">
+              <img src="images/scam-example.png" alt="Ilustração do golpe da aproximação" />
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section id="riscos" class="features-section">
         <div class="container">
           <h2>Onde os golpes mais acontecem?</h2>
