fix images paths

--- a/index.html
+++ b/index.html
@@ -72,16 +72,11 @@
           <p style="text-align: center; max-width: 600px; margin: 0 auto 30px;">Fique atento! Os golpes de aproximação são mais comuns em locais de grande movimento, como:</p>
           <div class="alternating-columns">
             <div class="column">
-              <div class="video-container">
-                <video autoplay loop muted playsinline>
-                  <source src="https://cdn.coverr.co/videos/coverr-a-man-riding-a-bus-2315/1080p.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video>
-              </div>
-            </div>
-            <div class="column">
               <h3>Transporte Público</h3>
               <p>Ônibus, metrôs e trens lotados são ambientes ideais para os golpistas agirem sem serem percebidos.</p>
+            </div>
+            <div class="column">
+              <img src="images/public-transport.png" alt="Eventos" />
             </div>
           </div>
           <div class="alternating-columns">
@@ -90,16 +85,16 @@
               <p>Shows, festas e festivais são alvos frequentes devido à distração e ao grande número de pessoas.</p>
             </div>
             <div class="column">
-              <img src="images/golpix-sad.png" alt="Eventos" />
+              <img src="images/crowded-event.png" alt="Eventos" />
             </div>
           </div>
           <div class="alternating-columns">
             <div class="column">
-              <img src="images/golpix-evil.png" alt="Comércio de Rua" />
-            </div>
-            <div class="column">
               <h3>Comércio de Rua</h3>
               <p>Feiras livres e vendedores ambulantes podem ser pontos de vulnerabilidade para pagamentos por aproximação.</p>
+            </div>
+            <div class="column">
+            <img src="images/crowded-place.png" alt="Comércio de Rua" />
             </div>
           </div>
         </div>
