including script.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar">
       <div class="container">
-        <div class="logo"><a href="#">GUARD</a></div>
+        <div class="logo"><a href="#guard">GUARD</a></div>
         <ul class="nav-links">
           <li><a href="#golpe">Como funciona o golpe?</a></li>
           <li><a href="#riscos">Locais de risco</a></li>
@@ -28,7 +28,7 @@
       </div>
     </nav>
 
-    <header class="hero">
+    <header id="guard" class="hero">
       <div class="hero-content">
         <div class="container">
           <h1>GUARD CARD segurança no seu bolso!</h1>
@@ -156,5 +156,7 @@
         <p>&copy; 2025 GUARD CARD. Todos os direitos reservados.</p>
       </div>
     </footer>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
