updating the navbar cta button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#golpe">Como funciona o golpe?</a></li>
           <li><a href="#riscos">Locais de risco</a></li>
           <li><a href="#como-funciona">Como Funciona</a></li>
-          <li><a href="https://loja.guardcard.com.br" target="_blank">Compre Agora</a></li>
+          <li><a href="https://loja.guardcard.com.br" target="_blank" class="nav-btn">Compre Agora</a></li>
         </ul>
       </div>
     </nav>
