add google analytics

--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
       </div>
     </footer>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQR9HC6DFP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XQR9HC6DFP');
+    </script>
+
     <script src="js/script.js"></script>
   </body>
 </html>
