--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <link href="https://fonts.cdnfonts.com/css/baron-neue" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQR9HC6DFP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XQR9HC6DFP');
+    </script>
   </head>
   <body>
     <nav class="navbar">
@@ -156,15 +166,6 @@
         <p>&copy; 2025 GUARD CARD. Todos os direitos reservados.</p>
       </div>
     </footer>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQR9HC6DFP"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-XQR9HC6DFP');
-    </script>
 
     <script src="js/script.js"></script>
   </body>
