removed card-circuit, add card flipper

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="container">
         <div class="logo"><a href="#guard">GUARD</a></div>
         <ul class="nav-links">
-          <li><a href="#golpe">Como funciona o golpe?</a></li>
+          <li><a href="#golpe">O que é o golpe da maquininha?</a></li>
           <li><a href="#riscos">Locais de risco</a></li>
-          <li><a href="#como-funciona">Como Funciona</a></li>
+          <li><a href="#como-funciona">Como me proteger</a></li>
           <li><a href="https://loja.guardcard.com.br" target="_blank" class="nav-btn">Compre Agora</a></li>
         </ul>
       </div>
@@ -114,7 +114,7 @@
         <div class="container">
           <div class="how-it-works-content">
             <div class="how-it-works-text">
-              <h2>Como o GUARD CARD funciona?</h2>
+              <h2>Como o GUARD CARD me protege?</h2>
               <p style="text-align: justify">
                 O GUARD CARD utiliza uma tecnologia de ativação por
                 radiofrequência (13.56 Mhz), a mesma utilizada pelas maquininhas
@@ -140,10 +140,14 @@
               </ul>
             </div>
             <div class="how-it-works-image">
-              <img
-                src="images/card-circuit.png"
-                alt="GUARD CARD em uma carteira"
-              />
+              <div class="card-flipper">
+                <div class="card-face card-front">
+                  <img src="images/card-front.png" alt="GUARD CARD - Frente" />
+                </div>
+                <div class="card-face card-back">
+                  <img src="images/card-back.png" alt="GUARD CARD - Verso" />
+                </div>
+              </div>
             </div>
           </div>
         </div>
