--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <main>
-      <section id="golpe" class="features-section">
+      <section id="golpe" class="golpe-section">
         <div class="container">
           <h2 style="text-align: center; margin-bottom: 30px;">Como funciona o golpe da aproximação?</h2>
           <div class="alternating-columns">
@@ -80,31 +80,21 @@
         <div class="container">
           <h2>Onde os golpes mais acontecem?</h2>
           <p style="text-align: center; max-width: 600px; margin: 0 auto 30px;">Fique atento! Os golpes de aproximação são mais comuns em locais de grande movimento, como:</p>
-          <div class="alternating-columns">
+          <div class="risk-columns">
             <div class="column">
+              <img src="images/public-transport.png" alt="Eventos" />
               <h3>Transporte Público</h3>
               <p>Ônibus, metrôs e trens lotados são ambientes ideais para os golpistas agirem sem serem percebidos.</p>
             </div>
             <div class="column">
-              <img src="images/public-transport.png" alt="Eventos" />
-            </div>
-          </div>
-          <div class="alternating-columns">
-            <div class="column">
+              <img src="images/crowded-event.png" alt="Eventos" />
               <h3>Grandes Eventos</h3>
               <p>Shows, festas e festivais são alvos frequentes devido à distração e ao grande número de pessoas.</p>
             </div>
             <div class="column">
-              <img src="images/crowded-event.png" alt="Eventos" />
-            </div>
-          </div>
-          <div class="alternating-columns">
-            <div class="column">
+              <img src="images/crowded-place.png" alt="Comércio de Rua" />
               <h3>Comércio de Rua</h3>
               <p>Feiras livres e vendedores ambulantes podem ser pontos de vulnerabilidade para pagamentos por aproximação.</p>
-            </div>
-            <div class="column">
-            <img src="images/crowded-place.png" alt="Comércio de Rua" />
             </div>
           </div>
         </div>
