fix responsivenes and add hamburger menu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
           <li><a href="#como-funciona">Como me proteger</a></li>
           <li><a href="https://loja.guardcard.com.br" target="_blank" class="nav-btn">Compre Agora</a></li>
         </ul>
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
       </div>
     </nav>
 
