add bouncing arrow to the bottom left of the screen

--- a/index.html
+++ b/index.html
@@ -167,5 +167,9 @@
     </footer>
 
     <script src="js/script.js"></script>
+
+    <div class="scroll-indicator">
+      <div class="arrow"></div>
+    </div>
   </body>
 </html>
