--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
     <header id="guard" class="hero">
       <div class="hero-content">
         <div class="container">
-          <h1>GUARD CARD segurança no seu bolso!</h1>
+          <h1>
+            GUARD CARD
+            <small>segurança no seu bolso!</small>
+          </h1>
           <p class="subtitle">
-            Proteja-se contra os golpes por aproximação e evite dores de cabeça
-            com as suas economias.
+            Descubra uma preoteção simples, <br />
+            acessível e prática contra golpes
           </p>
           <div class="arrow-down"></div>
         </div>
@@ -84,22 +87,21 @@
       <section id="riscos" class="features-section">
         <div class="container">
           <h2>Onde os golpes mais acontecem?</h2>
-          <p style="text-align: center; max-width: 600px; margin: 0 auto 30px;">Fique atento! Os golpes de aproximação são mais comuns em locais de grande movimento, como:</p>
           <div class="risk-columns">
             <div class="column">
               <img src="images/public-transport.png" alt="Eventos" />
               <h3>Transporte Público</h3>
-              <p>Ônibus, metrôs e trens lotados são ambientes ideais para os golpistas agirem sem serem percebidos.</p>
+              <p>Ônibus, metrôs e trens lotados são ambientes propícios para ação de golpistas.</p>
             </div>
             <div class="column">
               <img src="images/crowded-event.png" alt="Eventos" />
               <h3>Grandes Eventos</h3>
-              <p>Shows, festas e festivais são alvos frequentes devido à distração e ao grande número de pessoas.</p>
+              <p>Grande número de expectadores e ambiente favorável à distrações, tornam shows e festivais suscetíveis ao golpe por aproximação.</p>
             </div>
             <div class="column">
               <img src="images/crowded-place.png" alt="Comércio de Rua" />
-              <h3>Comércio de Rua</h3>
-              <p>Feiras livres e vendedores ambulantes podem ser pontos de vulnerabilidade para pagamentos por aproximação.</p>
+              <h3>Centros Urbanos</h3>
+              <p>Locais de grande circulação de pessoas, são especialmente vulneráveis ao golpe da maquininha.</p>
             </div>
           </div>
         </div>
@@ -113,24 +115,22 @@
               <p style="text-align: justify">
                 O GUARD CARD utiliza uma tecnologia de ativação por
                 radiofrequência (13.56 Mhz), a mesma utilizada pelas maquininhas
-                de pagamento. Ao receber energia, ele instantaneamente cria um
-                embaralhamento do sinal emitido pelo seu cartão do banco,
-                tornando praticamente impossível para o golpista roubar seus
-                dados.
+                de pagamento. Ao receber energia, ele instantaneamente cria um embaralhamento 
+                do sinal emitido pelo seu cartão bancário, reduzindo as chances de furto financeiro.
               </p>
               <ul>
                 <li>
-                  <span class="check-icon">✔</span> Não utiliza bateria, nem
-                  precisa de carregamento. Proteção passiva enquanto estiver na
-                  sua carteira.
+                  <span class="check-icon">✔</span> 
+                  Não utiliza bateria e não requer carregamento: 
+                  proteção passiva enquanto estiver na sua carteira.
                 </li>
                 <li>
-                  <span class="check-icon">✔</span> A prova d'agua, graças ao
-                  seu revestimento impermeável.
+                  <span class="check-icon">✔</span>
+                  ⁠Possui revestimento impermeável, sendo a prova d’água.
                 </li>
                 <li>
-                  <span class="check-icon">✔</span> Do tamanho de um cartão
-                  bancário convencional.
+                  <span class="check-icon">✔</span>
+                  ⁠Pequeno, prático e versátil: do tamanho do cartão bancário convencional.
                 </li>
               </ul>
             </div>
