Inserting social media links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/baron-neue" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
@@ -159,9 +160,17 @@
       </section>
     </main>
 
-    <footer class="cta-section">
+    <footer class="footer-section">
       <div class="container">
-        <div class="logo"><a>GUARD</a></div>
+        <div class="social-links">
+          <a href="https://facebook.com/guardcardoficial" target="_blank" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://instagram.com/guardcardoficial" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+        <div class="logo"><a href="#guard">GUARD</a></div>
         <p>&copy; 2025 GUARD CARD. Todos os direitos reservados.</p>
       </div>
     </footer>
