--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="column">
               <img src="images/crowded-event.png" alt="Eventos" />
               <h3>Grandes Eventos</h3>
-              <p>Grande número de expectadores e ambiente favorável à distrações, tornam shows e festivais suscetíveis ao golpe por aproximação.</p>
+              <p>Grande número de espectadores e ambiente favorável a distrações, tornam shows e festivais suscetíveis ao golpe por aproximação.</p>
             </div>
             <div class="column">
               <img src="images/crowded-place.png" alt="Comércio de Rua" />
