Add FAQ section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
       </section>
     </main>
 
+    <section id="faq" class="faq-section">
+      <div class="container">
+        <h2>Perguntas Frequentes</h2>
+        <div class="accordion"></div>
+      </div>
+    </section>
+
     <footer class="footer-section">
       <div class="container">
         <div class="social-links">
@@ -176,6 +183,8 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/faq.js"></script>
+    <script src="js/faq-accordion.js"></script>
 
     <div class="scroll-indicator">
       <div class="arrow"></div>
