fix faq; add terms of service

--- a/index.html
+++ b/index.html
@@ -177,14 +177,15 @@
             <i class="fab fa-instagram"></i>
           </a>
         </div>
-        <div class="logo"><a href="#guard">GUARD</a></div>
-        <p>&copy; 2025 GUARD CARD. Todos os direitos reservados.</p>
+        <div class="logo"><a href="#guard">GUARD</a><span class="trade-mark">®</span></div>
+        <p>Todos os direitos reservados. <br />Leia os <a class="modal-link" href="/#t" id="terms-link">Termos de serviço</a></p>
       </div>
     </footer>
 
     <script src="js/script.js"></script>
     <script src="js/faq.js"></script>
     <script src="js/faq-accordion.js"></script>
+    <script src="js/modal.js"></script>
 
     <div class="scroll-indicator">
       <div class="arrow"></div>
