BETH: fix misspelling on hero section

--- a/index.html
+++ b/index.html
@@ -11,23 +11,31 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.cdnfonts.com/css/baron-neue" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    
+    <link href="https://fonts.cdnfonts.com/css/baron-neue" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQR9HC6DFP"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XQR9HC6DFP"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-XQR9HC6DFP');
+      gtag("config", "G-XQR9HC6DFP");
     </script>
   </head>
   <body>
@@ -38,7 +46,14 @@
           <li><a href="#golpe">O que é o golpe da maquininha?</a></li>
           <li><a href="#riscos">Locais de risco</a></li>
           <li><a href="#como-funciona">Como me proteger</a></li>
-          <li><a href="https://loja.guardcard.com.br" target="_blank" class="nav-btn">Compre Agora</a></li>
+          <li>
+            <a
+              href="https://loja.guardcard.com.br"
+              target="_blank"
+              class="nav-btn"
+              >Compre Agora</a
+            >
+          </li>
         </ul>
         <div class="hamburger-menu">
           <div class="bar"></div>
@@ -56,7 +71,7 @@
             <small>segurança no seu bolso!</small>
           </h1>
           <p class="subtitle">
-            Descubra uma preoteção simples, <br />
+            Descubra uma proteção simples, <br />
             acessível e prática contra golpes
           </p>
           <div class="arrow-down"></div>
@@ -67,23 +82,33 @@
     <main>
       <section id="golpe" class="golpe-section">
         <div class="container">
-          <h2 style="text-align: center; margin-bottom: 30px;">Como funciona o golpe da aproximação?</h2>
+          <h2 style="text-align: center; margin-bottom: 30px">
+            Como funciona o golpe da aproximação?
+          </h2>
           <div class="alternating-columns">
             <div class="column">
-              <p style="text-align: justify;">
-                O golpe da aproximação, também conhecido como da maquininha, ocorre quando um criminoso, 
-                utilizando uma maquininha de cartão escondida, se aproxima da vítima e efetua uma transação sem que ela perceba.  
+              <p style="text-align: justify">
+                O golpe da aproximação, também conhecido como da maquininha,
+                ocorre quando um criminoso, utilizando uma maquininha de cartão
+                escondida, se aproxima da vítima e efetua uma transação sem que
+                ela perceba.
               </p>
-              <p style="text-align: justify;">
-                O golpista digita um valor na maquininha, geralmente abaixo do limite que exige senha, e aproxima o dispositivo do bolso, bolsa ou carteira da pessoa. 
+              <p style="text-align: justify">
+                O golpista digita um valor na maquininha, geralmente abaixo do
+                limite que exige senha, e aproxima o dispositivo do bolso, bolsa
+                ou carteira da pessoa.
               </p>
-              <p style="text-align: justify;">
-                Se o cartão com a função de pagamento por aproximação estiver ao alcance, a transação é realizada instantaneamente. 
-                A vítima só percebe o roubo ao verificar o extrato bancário.
+              <p style="text-align: justify">
+                Se o cartão com a função de pagamento por aproximação estiver ao
+                alcance, a transação é realizada instantaneamente. A vítima só
+                percebe o roubo ao verificar o extrato bancário.
               </p>
             </div>
             <div class="column">
-              <img src="images/scam-example.png" alt="Ilustração do golpe da aproximação" />
+              <img
+                src="images/scam-example.png"
+                alt="Ilustração do golpe da aproximação"
+              />
             </div>
           </div>
         </div>
@@ -96,17 +121,26 @@
             <div class="column">
               <img src="images/public-transport.png" alt="Eventos" />
               <h3>Transporte Público</h3>
-              <p>Ônibus, metrôs e trens lotados são ambientes propícios para ação de golpistas.</p>
+              <p>
+                Ônibus, metrôs e trens lotados são ambientes propícios para ação
+                de golpistas.
+              </p>
             </div>
             <div class="column">
               <img src="images/crowded-event.png" alt="Eventos" />
               <h3>Grandes Eventos</h3>
-              <p>Grande número de espectadores e ambiente favorável a distrações, tornam shows e festivais suscetíveis ao golpe por aproximação.</p>
+              <p>
+                Grande número de espectadores e ambiente favorável a distrações,
+                tornam shows e festivais suscetíveis ao golpe por aproximação.
+              </p>
             </div>
             <div class="column">
               <img src="images/crowded-place.png" alt="Comércio de Rua" />
               <h3>Centros Urbanos</h3>
-              <p>Locais de grande circulação de pessoas, são especialmente vulneráveis ao golpe da maquininha.</p>
+              <p>
+                Locais de grande circulação de pessoas, são especialmente
+                vulneráveis ao golpe da maquininha.
+              </p>
             </div>
           </div>
         </div>
@@ -120,14 +154,15 @@
               <p style="text-align: justify">
                 O GUARD CARD utiliza uma tecnologia de ativação por
                 radiofrequência (13.56 Mhz), a mesma utilizada pelas maquininhas
-                de pagamento. Ao receber energia, ele instantaneamente cria um embaralhamento 
-                do sinal emitido pelo seu cartão bancário, reduzindo as chances de furto financeiro.
+                de pagamento. Ao receber energia, ele instantaneamente cria um
+                embaralhamento do sinal emitido pelo seu cartão bancário,
+                reduzindo as chances de furto financeiro.
               </p>
               <ul>
                 <li>
-                  <span class="check-icon">✔</span> 
-                  Não utiliza bateria e não requer carregamento: 
-                  proteção passiva enquanto estiver na sua carteira.
+                  <span class="check-icon">✔</span>
+                  Não utiliza bateria e não requer carregamento: proteção
+                  passiva enquanto estiver na sua carteira.
                 </li>
                 <li>
                   <span class="check-icon">✔</span>
@@ -135,7 +170,8 @@
                 </li>
                 <li>
                   <span class="check-icon">✔</span>
-                  ⁠Pequeno, prático e versátil: do tamanho do cartão bancário convencional.
+                  ⁠Pequeno, prático e versátil: do tamanho do cartão bancário
+                  convencional.
                 </li>
               </ul>
             </div>
@@ -174,15 +210,28 @@
     <footer class="footer-section">
       <div class="container">
         <div class="social-links">
-          <a href="https://facebook.com/guardcardoficial" target="_blank" aria-label="Facebook">
+          <a
+            href="https://facebook.com/guardcardoficial"
+            target="_blank"
+            aria-label="Facebook"
+          >
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://instagram.com/guardcardoficial" target="_blank" aria-label="Instagram">
+          <a
+            href="https://instagram.com/guardcardoficial"
+            target="_blank"
+            aria-label="Instagram"
+          >
             <i class="fab fa-instagram"></i>
           </a>
         </div>
-        <div class="logo"><a href="#guard">GUARD</a><span class="trade-mark">®</span></div>
-        <p>Todos os direitos reservados. <br />Leia os <a class="modal-link" href="/#t" id="terms-link">Termos de serviço</a></p>
+        <div class="logo">
+          <a href="#guard">GUARD</a><span class="trade-mark">®</span>
+        </div>
+        <p>
+          Todos os direitos reservados. <br />Leia os
+          <a class="modal-link" href="/#t" id="terms-link">Termos de serviço</a>
+        </p>
       </div>
     </footer>
 
