--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
     <script src="js/faq.js"></script>
     <script src="js/faq-accordion.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/parallax.js"></script>
 
     <div class="scroll-indicator">
       <div class="arrow"></div>
