parallax and riscos's section

--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
                 percebe o roubo ao verificar o extrato bancário.
               </p>
             </div>
-            <div class="column">
+            <div class="column parallax-container">
               <img
                 src="images/scam-example.png"
                 alt="Ilustração do golpe da aproximação"
+                class="parallax"
               />
             </div>
           </div>
@@ -118,29 +119,33 @@
         <div class="container">
           <h2>Onde os golpes mais acontecem?</h2>
           <div class="risk-columns">
-            <div class="column">
-              <img src="images/public-transport.png" alt="Eventos" />
-              <h3>Transporte Público</h3>
-              <p>
-                Ônibus, metrôs e trens lotados são ambientes propícios para ação
-                de golpistas.
-              </p>
+            <div class="column risk-one">
+              <div class="risk-content">
+                <h3>Transporte Público</h3>
+                <p>
+                  Ônibus, metrôs e trens lotados são ambientes propícios para
+                  ação de golpistas.
+                </p>
+              </div>
             </div>
-            <div class="column">
-              <img src="images/crowded-event.png" alt="Eventos" />
-              <h3>Grandes Eventos</h3>
-              <p>
-                Grande número de espectadores e ambiente favorável a distrações,
-                tornam shows e festivais suscetíveis ao golpe por aproximação.
-              </p>
+            <div class="column risk-two">
+              <div class="risk-content">
+                <h3>Grandes Eventos</h3>
+                <p>
+                  Grande número de espectadores e ambiente favorável a
+                  distrações, tornam shows e festivais suscetíveis ao golpe por
+                  aproximação.
+                </p>
+              </div>
             </div>
-            <div class="column">
-              <img src="images/crowded-place.png" alt="Comércio de Rua" />
-              <h3>Centros Urbanos</h3>
-              <p>
-                Locais de grande circulação de pessoas, são especialmente
-                vulneráveis ao golpe da maquininha.
-              </p>
+            <div class="column risk-three">
+              <div class="risk-content">
+                <h3>Centros Urbanos</h3>
+                <p>
+                  Locais de grande circulação de pessoas, são especialmente
+                  vulneráveis ao golpe da maquininha.
+                </p>
+              </div>
             </div>
           </div>
         </div>
