fix parallax and header's text

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
           <div class="risk-columns">
             <div class="column risk-one">
               <div class="risk-content">
+                <img
+                  src="images/public-transport.png"
+                  alt="Transporte Público"
+                  class="mobile-risk-image"
+                />
                 <h3>Transporte Público</h3>
                 <p>
                   Ônibus, metrôs e trens lotados são ambientes propícios para
@@ -130,6 +135,11 @@
             </div>
             <div class="column risk-two">
               <div class="risk-content">
+                <img
+                  src="images/crowded-event.png"
+                  alt="Grandes Eventos"
+                  class="mobile-risk-image"
+                />
                 <h3>Grandes Eventos</h3>
                 <p>
                   Grande número de espectadores e ambiente favorável a
@@ -140,6 +150,11 @@
             </div>
             <div class="column risk-three">
               <div class="risk-content">
+                <img
+                  src="images/crowded-place.png"
+                  alt="Centros Urbanos"
+                  class="mobile-risk-image"
+                />
                 <h3>Centros Urbanos</h3>
                 <p>
                   Locais de grande circulação de pessoas, são especialmente
