removed background images on mobile, add parallax effect for text

--- a/index.html
+++ b/index.html
@@ -211,11 +211,13 @@
 
       <section id="cta" class="cta-section">
         <div class="container">
-          <h2>Não dê sorte ao azar, peça já o seu!</h2>
-          <p>Aproveite o preço promocional de lançamento</p>
-          <a href="https://loja.guardcard.com.br" target="_blank" class="btn"
-            >Comprar com 50% de desconto</a
-          >
+          <div class="cta-content">
+            <h2>Não dê sorte ao azar, peça já o seu!</h2>
+            <p>Aproveite o preço promocional de lançamento</p>
+            <a href="https://loja.guardcard.com.br" target="_blank" class="btn"
+              >Comprar com 50% de desconto</a
+            >
+          </div>
         </div>
       </section>
     </main>
